kubernetes/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xrsc07
  labels:
    environment: xrsc07
