kubernetes/7-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itachuva-backend-deployment
  namespace: xrsc07
  labels:
    app: itachuva-backend
spec:
  selector:
    matchLabels:
      app: itachuva-backend
  template:
    metadata:
      labels:
        app: itachuva-backend
    spec:
      containers:
      - name: nodejs
        image: gabrieltoti/itachuva-backend:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "1"
        ports:
          - containerPort: 4000
        volumeMounts:
        - name: dados-volume
          mountPath: /app/data
      volumes:
      - name: dados-volume
        persistentVolumeClaim:
          claimName: itachuva-pipeline-volume

---

apiVersion: v1
kind: Service
metadata:
  name: itachuva-backend-port
  namespace: xrsc07
spec:
  type: ClusterIP
  selector:
    app: itachuva-backend
  ports:
  - port: 4000
    targetPort: 4000
