kubernetes/8-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itachuva-frontend-deployment
  namespace: xrsc07
  labels:
    app: itachuva-frontend
spec:
  selector:
    matchLabels:
      app: itachuva-frontend
  template:
    metadata:
      labels:
        app: itachuva-frontend
    spec:
      containers:
      - name: nodejs
        image: gabrieltoti/itachuva-frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "4"
          requests:
            cpu: "2"
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: itachuva-frontend-port
  namespace: xrsc07
spec:
  type: ClusterIP
  selector:
    app: itachuva-frontend
  ports:
  - port: 3000
    targetPort: 3000
