kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itachuva-ingress
  namespace: xrsc07
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  tls:
  - {}
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itachuva-frontend-port
            port:
              number: 3000
  - host:
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: itachuva-backend-port
            port:
              number: 4000
